Error fix
Worm hole error fix
Casual error fixes in doSomething()